--- a/ASS2/Data_MIning_Assignment2.ipynb
+++ b/ASS2/Data_MIning_Assignment2.ipynb
@@ -43,7 +43,8 @@
     "pd.set_option('display.max_rows', 20)\n",
     "pd.set_option('display.max_columns', None)\n",
     "pd.set_option('display.width', None)\n",
-    "from sklearn.metrics.pairwise import cosine_similarity\n"
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "import pickle\n"
    ]
   },
   {
@@ -979,8 +980,8 @@
     "vectorizer = TfidfVectorizer(ngram_range=(1, 1), max_df=1.0, min_df=1, norm='l1', stop_words=stop_words)\n",
     "unigrams = vectorizer.fit_transform(df['description'])\n",
     "\n",
-    "vectorizer = TfidfVectorizer(ngram_range=(2, 2), max_df=1.0, min_df=1, norm='l1', stop_words=stop_words)\n",
-    "bigrams = vectorizer.fit_transform(df['description'])"
+    "# vectorizer = TfidfVectorizer(ngram_range=(2, 2), max_df=1.0, min_df=1, norm='l1', stop_words=stop_words)\n",
+    "# bigrams = vectorizer.fit_transform(df['description'])"
    ]
   },
   {
@@ -1001,37 +1002,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1000\n",
-      "2000\n",
-      "3000\n",
-      "4000\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 7\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[39mif\u001b[39;00m i \u001b[39m%\u001b[39m \u001b[39m1000\u001b[39m \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m      5\u001b[0m     \u001b[39mprint\u001b[39m(i)\n\u001b[0;32m----> 7\u001b[0m cosine_similarities \u001b[39m=\u001b[39m cosine_similarity(unigrams[i:i\u001b[39m+\u001b[39;49m\u001b[39m1\u001b[39;49m], unigrams[\u001b[39m0\u001b[39;49m:\u001b[39mlen\u001b[39;49m(df)])\n\u001b[1;32m      9\u001b[0m recommendations[df[\u001b[39m'\u001b[39m\u001b[39mbookId\u001b[39m\u001b[39m'\u001b[39m][i]] \u001b[39m=\u001b[39m cosine_similarities[\u001b[39m0\u001b[39m]\u001b[39m.\u001b[39margsort()[:\u001b[39m-\u001b[39m\u001b[39m11\u001b[39m:\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/sklearn/metrics/pairwise.py:1399\u001b[0m, in \u001b[0;36mcosine_similarity\u001b[0;34m(X, Y, dense_output)\u001b[0m\n\u001b[1;32m   1397\u001b[0m     Y_normalized \u001b[39m=\u001b[39m X_normalized\n\u001b[1;32m   1398\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m-> 1399\u001b[0m     Y_normalized \u001b[39m=\u001b[39m normalize(Y, copy\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)\n\u001b[1;32m   1401\u001b[0m K \u001b[39m=\u001b[39m safe_sparse_dot(X_normalized, Y_normalized\u001b[39m.\u001b[39mT, dense_output\u001b[39m=\u001b[39mdense_output)\n\u001b[1;32m   1403\u001b[0m \u001b[39mreturn\u001b[39;00m K\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/sklearn/preprocessing/_data.py:1817\u001b[0m, in \u001b[0;36mnormalize\u001b[0;34m(X, norm, axis, copy, return_norm)\u001b[0m\n\u001b[1;32m   1814\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m   1815\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39m'\u001b[39m\u001b[39m%d\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m is not a supported axis\u001b[39m\u001b[39m\"\u001b[39m \u001b[39m%\u001b[39m axis)\n\u001b[0;32m-> 1817\u001b[0m X \u001b[39m=\u001b[39m check_array(\n\u001b[1;32m   1818\u001b[0m     X,\n\u001b[1;32m   1819\u001b[0m     accept_sparse\u001b[39m=\u001b[39;49msparse_format,\n\u001b[1;32m   1820\u001b[0m     copy\u001b[39m=\u001b[39;49mcopy,\n\u001b[1;32m   1821\u001b[0m     estimator\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mthe normalize function\u001b[39;49m\u001b[39m\"\u001b[39;49m,\n\u001b[1;32m   1822\u001b[0m     dtype\u001b[39m=\u001b[39;49mFLOAT_DTYPES,\n\u001b[1;32m   1823\u001b[0m )\n\u001b[1;32m   1824\u001b[0m \u001b[39mif\u001b[39;00m axis \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m   1825\u001b[0m     X \u001b[39m=\u001b[39m X\u001b[39m.\u001b[39mT\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/sklearn/utils/validation.py:845\u001b[0m, in \u001b[0;36mcheck_array\u001b[0;34m(array, accept_sparse, accept_large_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, ensure_min_samples, ensure_min_features, estimator, input_name)\u001b[0m\n\u001b[1;32m    843\u001b[0m \u001b[39mif\u001b[39;00m sp\u001b[39m.\u001b[39missparse(array):\n\u001b[1;32m    844\u001b[0m     _ensure_no_complex_data(array)\n\u001b[0;32m--> 845\u001b[0m     array \u001b[39m=\u001b[39m _ensure_sparse_format(\n\u001b[1;32m    846\u001b[0m         array,\n\u001b[1;32m    847\u001b[0m         accept_sparse\u001b[39m=\u001b[39;49maccept_sparse,\n\u001b[1;32m    848\u001b[0m         dtype\u001b[39m=\u001b[39;49mdtype,\n\u001b[1;32m    849\u001b[0m         copy\u001b[39m=\u001b[39;49mcopy,\n\u001b[1;32m    850\u001b[0m         force_all_finite\u001b[39m=\u001b[39;49mforce_all_finite,\n\u001b[1;32m    851\u001b[0m         accept_large_sparse\u001b[39m=\u001b[39;49maccept_large_sparse,\n\u001b[1;32m    852\u001b[0m         estimator_name\u001b[39m=\u001b[39;49mestimator_name,\n\u001b[1;32m    853\u001b[0m         input_name\u001b[39m=\u001b[39;49minput_name,\n\u001b[1;32m    854\u001b[0m     )\n\u001b[1;32m    855\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    856\u001b[0m     \u001b[39m# If np.array(..) gives ComplexWarning, then we convert the warning\u001b[39;00m\n\u001b[1;32m    857\u001b[0m     \u001b[39m# to an error. This is needed because specifying a non complex\u001b[39;00m\n\u001b[1;32m    858\u001b[0m     \u001b[39m# dtype to the function converts complex to real dtype,\u001b[39;00m\n\u001b[1;32m    859\u001b[0m     \u001b[39m# thereby passing the test made in the lines following the scope\u001b[39;00m\n\u001b[1;32m    860\u001b[0m     \u001b[39m# of warnings context manager.\u001b[39;00m\n\u001b[1;32m    861\u001b[0m     \u001b[39mwith\u001b[39;00m warnings\u001b[39m.\u001b[39mcatch_warnings():\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/sklearn/utils/validation.py:552\u001b[0m, in \u001b[0;36m_ensure_sparse_format\u001b[0;34m(spmatrix, accept_sparse, dtype, copy, force_all_finite, accept_large_sparse, estimator_name, input_name)\u001b[0m\n\u001b[1;32m    549\u001b[0m     spmatrix \u001b[39m=\u001b[39m spmatrix\u001b[39m.\u001b[39mastype(dtype)\n\u001b[1;32m    550\u001b[0m \u001b[39melif\u001b[39;00m copy \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m changed_format:\n\u001b[1;32m    551\u001b[0m     \u001b[39m# force copy\u001b[39;00m\n\u001b[0;32m--> 552\u001b[0m     spmatrix \u001b[39m=\u001b[39m spmatrix\u001b[39m.\u001b[39;49mcopy()\n\u001b[1;32m    554\u001b[0m \u001b[39mif\u001b[39;00m force_all_finite:\n\u001b[1;32m    555\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mhasattr\u001b[39m(spmatrix, \u001b[39m\"\u001b[39m\u001b[39mdata\u001b[39m\u001b[39m\"\u001b[39m):\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/scipy/sparse/_data.py:92\u001b[0m, in \u001b[0;36m_data_matrix.copy\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     91\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mcopy\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[0;32m---> 92\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_with_data(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mdata\u001b[39m.\u001b[39;49mcopy(), copy\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "# on a loop for all the bookids, get the top 10 recommendations and store them in a dictionary\n",
@@ -1041,32 +1014,105 @@
     "        print(i)\n",
     "        \n",
     "    cosine_similarities = cosine_similarity(unigrams[i:i+1], unigrams[0:len(df)])\n",
-    "\n",
-    "    recommendations[df['bookId'][i]] = cosine_similarities[0].argsort()[:-11:-1]\n",
+    "    # keep the ones with the biigest cosine similarity, the -11:-1 gives me the worst 10\n",
+    "    similar_indices = cosine_similarities[0].argsort()[-11:-1]\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create a recommendation function that takes in a bookid and the number of top similarities up to 100 and prints the bookId, description and similarity score of each one using the recommendations dictionary\n",
+    "# with open('recommendations.pickle', 'wb') as handle:\n",
+    "#     pickle.dump(recommendations, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('recommendations.pickle', 'rb') as handle:\n",
+    "    recommendations = pickle.load(handle)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recommnending 5 books similar to 2.Harry_Potter_and_the_Order_of_the_Phoenix\n",
+      "---------------------------------------------------------\n",
+      "Recommended: 15881.Harry_Potter_and_the_Chamber_of_Secrets\n",
+      "Description: ever sinc harri potter come home summer dursley mean hideou harri want get back hogwart school witchcraft wizardri pack bag harri receiv warn strang impish creatur say harri return hogwart disast strike strike harri second year hogwart fresh torment horror aris includ outrag stuck new professor spirit haunt girl bathroom real troubl begin someon turn hogwart student stone could draco malfoy poison rival ever could possibl hagrid whose mysteri past final told could one everyon hogwart suspect harri potter\n",
+      "(score: [[0.37030114]])\n",
+      "\n",
+      "Recommended: 5.Harry_Potter_and_the_Prisoner_of_Azkaban\n",
+      "Description: harri potter third year hogwart full new danger convict murder siriu black broken azkaban prison seem harri hogwart patrol dementor azkaban guard hunt siriu harri imagin siriu matter evil lord voldemort could frighten dementor terribl power fill anyon come across ach loneli despair meanwhil life continu usual hogwart top line broom take harri success quidditch sport wizard world new height cute fourth year student catch eye becom close new defens dark art teacher childhood friend father yet despit rel safeti life hogwart best effort dementor threat siriu black grow ever closer harri learn anyth educ wizardri thing often seem tragic revel heartwarm surpris high stake magic adventur await boy wizard funni poignant third instal belov seri scholast com\n",
+      "(score: [[0.32281806]])\n",
+      "\n",
+      "Recommended: 3.Harry_Potter_and_the_Sorcerer_s_Stone\n",
+      "Description: harri potter life miser parent dead stuck heartless rel forc live tini closet stair fortun chang receiv letter tell truth wizard mysteri visitor rescu rel take new home hogwart school witchcraft wizardri lifetim bottl magic power harri final feel like normal kid even within wizard commun special boy live person ever surviv kill cur inflict evil lord voldemort launch brutal takeov wizard world vanish fail kill harri though harri first year hogwart best life everyth perfect danger secret object hidden within castl wall harri believ respons prevent fall evil hand bring contact forc terrifi ever could imagin full sympathet charact wildli imagin situat countless excit detail first instal seri assembl unforgett magic world set stage mani high stake adventur come\n",
+      "(score: [[0.27829589]])\n",
+      "\n",
+      "Recommended: 2002.Harry_Potter_Schoolbooks_Box_Set\n",
+      "Description: altern cover edit isbn fan harri potter love chanc realli get insid hogwart school witchcraft wizardri straight hogwart school librari come two textbook use harri fellow wizard train written j k rowl two delight pseudonym quidditch age fantast beast find come packag fabul box set know wizard zacharia mump set first full descript game quidditch written renown quidditch expert author mani quidditch relat work quidditch age reveal everyth reader need know import sport wizard world evolut fli broomstick rule play quidditch chang sport sinc th centuri today detail quidditch team britain ireland book must quidditch fan old new well research fill diagram definit quidditch age everi wizard train need pro fantast beast find offer complet list fantast beast exist harri potter world acromantula monstrou eight eye spider capabl human speech yeti also known bigfoot abomin snowman well research inform come look like eat import ever meet one face face indispens textbook also includ insight muggl awar fantast beast inform magizoolog matter much ad fun authent fantast beast find featur scribbl comment margin harri potter previou owner book well friend ron hermion\n",
+      "(score: [[0.26982473]])\n",
+      "\n",
+      "Recommended: 6.Harry_Potter_and_the_Goblet_of_Fire\n",
+      "Description: harri potter midway train wizard come age harri want get away pernici dursley go intern quidditch cup hermion ron weasley want dream cho chang crush mayb dream want find mysteri event suppos take place hogwart year event involv two rival school magic competit happen hundr year want normal fourteen year old wizard unfortun harri potter normal even wizard standard case differ deadli\n",
+      "(score: [[0.25955726]])\n",
+      "\n",
+      "Recommended: 8058301-ghost-story\n",
+      "Description: last left mighti wizard detect harri dresden well fact murder unknown assassin dead stop friend danger except bodi magic help also sever dark spirit roam chicago shadow owe harri payback save friend soul harri pull ultim trick without magic\n",
+      "(score: [[0.2298154]])\n",
+      "\n",
+      "Recommended: 31538647-hogwarts\n",
+      "Description: ministri magic felt strongli howev construct addit wizard station middl london would stretch even muggl notori determin notic magic explod front face j k rowlingpottermor present collect j k rowl write short read origin featur pottermor com ebook write curat pottermor take beyond harri potter stori j k rowl reveal inspir intric detail charact live surpris wizard world hogwart incomplet unreli guid take journey hogwart school witchcraft wizardri ventur hogwart ground becom better acquaint perman resid learn lesson discov secret castl turn page\n",
+      "(score: [[0.22622086]])\n",
+      "\n",
+      "Recommended: 1.Harry_Potter_and_the_Half_Blood_Prince\n",
+      "Description: war voldemort go well even muggl govern notic ron scan obituari page daili prophet look familiar name dumbledor absent hogwart long stretch time order phoenix alreadi suffer loss yet war life goe weasley twin expand busi sixth year student learn appar lose eyebrow process teenag flirt fight fall love class never straightforward harri receiv extraordinari help mysteri half blood princ home front take center stage multilay sixth instal stori harri potter hogwart harri search full complet stori boy becam lord voldemort therebi find may vulner\n",
+      "(score: [[0.20977049]])\n",
+      "\n",
+      "Recommended: 47212.Storm_Front\n",
+      "Description: harri dresden wizardlost item found paranorm investig consult advic reason rate love potion endless purs entertain harri dresden best well technic chicago p case transcend mortal creativ capabl come answer everyday world actual full strang magic thing play well human harri come take wizard catch well whatev one problem busi put mildli stink polic bring consult grisli doubl murder commit black magic harri see dollar sign black magic black mage behind mage know harri name thing start get interest magic get guy kill\n",
+      "(score: [[0.19627806]])\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create a recommendation function that takes in an id and the number of top similarities up to 100 and prints the bookId, description and similarity score of each one using the recommendations dictionary\n",
     "def recommend(item_id, num):\n",
-    "\tprint('Recommending ' + str(num) + ' books similar to ' + str(item_id))\n",
+    "\n",
+    "\t# print Recommending num books similar to : item_id in python\n",
+    "\tprint('Recommnending ' + str(num) + ' books similar to ' + str(item_id))\n",
+    "\t\n",
+    "\n",
     "\tprint('---------------------------------------------------------')\n",
-    "\trecs = recommendations[item_id][1:num+1]\n",
+    "\trecs = recommendations[item_id][1:]\n",
+    "\tindex = df[df['bookId'] == item_id].index[0]\n",
+    "\n",
     "\tfor rec in recs:\n",
-    "\t\tprint('Recommended: ' + str(rec))\n",
+    "\t\tprint('Recommended: ' + str(df['bookId'][rec]))\n",
     "\t\tprint('Description: ' + str(df['description'][rec]))\n",
-    "\t\tprint('(score: ' + str(cosine_similarities[0][rec]) + ')')\n",
+    "\t\tprint('(score: ' + str(cosine_similarity(unigrams[index], unigrams[rec])) + ')')\n",
     "\n",
     "\t\tprint()\n",
+    "\t\n",
     "\n",
     "\n",
-    "recommend(item_id = 4085439, num = 5)"
+    "recommend(item_id = '2.Harry_Potter_and_the_Order_of_the_Phoenix', num = 5)\n"
    ]
   }
  ],
