--- a/ASS2/Data_MIning_Assignment2.ipynb
+++ b/ASS2/Data_MIning_Assignment2.ipynb
@@ -977,11 +977,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vectorizer = TfidfVectorizer(ngram_range=(1, 1), max_df=1.0, min_df=1, norm='l1', stop_words=stop_words)\n",
-    "unigrams = vectorizer.fit_transform(df['description'])\n",
+    "# vectorizer = TfidfVectorizer(ngram_range=(1, 1), max_df=1.0, min_df=1, norm='l1', stop_words=stop_words)\n",
+    "# unigrams = vectorizer.fit_transform(df['description'])\n",
     "\n",
-    "# vectorizer = TfidfVectorizer(ngram_range=(2, 2), max_df=1.0, min_df=1, norm='l1', stop_words=stop_words)\n",
-    "# bigrams = vectorizer.fit_transform(df['description'])"
+    "vectorizer = TfidfVectorizer(ngram_range=(2, 2), max_df=1.0, min_df=1, norm='l1', stop_words=stop_words)\n",
+    "bigrams = vectorizer.fit_transform(df['description'])"
    ]
   },
   {
@@ -1014,21 +1014,12 @@
     "        print(i)\n",
     "        \n",
     "    cosine_similarities = cosine_similarity(unigrams[i:i+1], unigrams[0:len(df)])\n",
-    "    # keep the ones with the biigest cosine similarity, the -11:-1 gives me the worst 10\n",
-    "    similar_indices = cosine_similarities[0].argsort()[-11:-1]\n",
+    "   \n",
+    "    recommendations[df['bookId'][i]] = cosine_similarities[0].argsort()[:-11:-1]\n",
     "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
     "# with open('recommendations.pickle', 'wb') as handle:\n",
-    "#     pickle.dump(recommendations, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
-    "\n"
+    "#     pickle.dump(recommendations, handle, protocol=pickle.HIGHEST_PROTOCOL)"
    ]
   },
   {
@@ -1043,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1071,22 +1062,6 @@
       "Recommended: 6.Harry_Potter_and_the_Goblet_of_Fire\n",
       "Description: harri potter midway train wizard come age harri want get away pernici dursley go intern quidditch cup hermion ron weasley want dream cho chang crush mayb dream want find mysteri event suppos take place hogwart year event involv two rival school magic competit happen hundr year want normal fourteen year old wizard unfortun harri potter normal even wizard standard case differ deadli\n",
       "(score: [[0.25955726]])\n",
-      "\n",
-      "Recommended: 8058301-ghost-story\n",
-      "Description: last left mighti wizard detect harri dresden well fact murder unknown assassin dead stop friend danger except bodi magic help also sever dark spirit roam chicago shadow owe harri payback save friend soul harri pull ultim trick without magic\n",
-      "(score: [[0.2298154]])\n",
-      "\n",
-      "Recommended: 31538647-hogwarts\n",
-      "Description: ministri magic felt strongli howev construct addit wizard station middl london would stretch even muggl notori determin notic magic explod front face j k rowlingpottermor present collect j k rowl write short read origin featur pottermor com ebook write curat pottermor take beyond harri potter stori j k rowl reveal inspir intric detail charact live surpris wizard world hogwart incomplet unreli guid take journey hogwart school witchcraft wizardri ventur hogwart ground becom better acquaint perman resid learn lesson discov secret castl turn page\n",
-      "(score: [[0.22622086]])\n",
-      "\n",
-      "Recommended: 1.Harry_Potter_and_the_Half_Blood_Prince\n",
-      "Description: war voldemort go well even muggl govern notic ron scan obituari page daili prophet look familiar name dumbledor absent hogwart long stretch time order phoenix alreadi suffer loss yet war life goe weasley twin expand busi sixth year student learn appar lose eyebrow process teenag flirt fight fall love class never straightforward harri receiv extraordinari help mysteri half blood princ home front take center stage multilay sixth instal stori harri potter hogwart harri search full complet stori boy becam lord voldemort therebi find may vulner\n",
-      "(score: [[0.20977049]])\n",
-      "\n",
-      "Recommended: 47212.Storm_Front\n",
-      "Description: harri dresden wizardlost item found paranorm investig consult advic reason rate love potion endless purs entertain harri dresden best well technic chicago p case transcend mortal creativ capabl come answer everyday world actual full strang magic thing play well human harri come take wizard catch well whatev one problem busi put mildli stink polic bring consult grisli doubl murder commit black magic harri see dollar sign black magic black mage behind mage know harri name thing start get interest magic get guy kill\n",
-      "(score: [[0.19627806]])\n",
       "\n"
      ]
     }
@@ -1100,7 +1075,7 @@
     "\t\n",
     "\n",
     "\tprint('---------------------------------------------------------')\n",
-    "\trecs = recommendations[item_id][1:]\n",
+    "\trecs = recommendations[item_id][1:num+1]\n",
     "\tindex = df[df['bookId'] == item_id].index[0]\n",
     "\n",
     "\tfor rec in recs:\n",
@@ -1113,6 +1088,154 @@
     "\n",
     "\n",
     "recommend(item_id = '2.Harry_Potter_and_the_Order_of_the_Phoenix', num = 5)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "devours ram but realtively faster than bigrams"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Bigrams"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1000\n"
+     ]
+    }
+   ],
+   "source": [
+    "recommendations = {}\n",
+    "from math import ceil\n",
+    "for i in range(0, ceil(len(df)/2)):\n",
+    "    if i % 1000 == 0:\n",
+    "        print(i)\n",
+    "        \n",
+    "    cosine_similarities = cosine_similarity(bigrams[i:i+1], bigrams[0:len(df)])\n",
+    "  \n",
+    "    recommendations[df['bookId'][i]] = cosine_similarities[0].argsort()[:-11:-1]\n",
+    "    # # print the top cosine similarities scores \n",
+    "    # print(cosine_similarities[0][recommendations[df['bookId'][i]]])\n",
+    "\n",
+    "with open('recommendationsB.pickle', 'wb') as handle:\n",
+    "    pickle.dump(recommendations, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# recommendations = {}\n",
+    "# for i in range(ceil(len(df)/2), len(df)):\n",
+    "#     if i % 1000 == 0:\n",
+    "#         print(i)\n",
+    "        \n",
+    "#     cosine_similarities = cosine_similarity(bigrams[i:i+1], bigrams[0:len(df)])\n",
+    "  \n",
+    "#     recommendations[df['bookId'][i]] = cosine_similarities[0].argsort()[:-11:-1]\n",
+    "\n",
+    "# with open('recommendationsC.pickle', 'wb') as handle:\n",
+    "#     pickle.dump(recommendations, handle, protocol=pickle.HIGHEST_PROTOCOL)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('recommendationsB.pickle', 'rb') as handle:\n",
+    "    recommendations1 = pickle.load(handle)\n",
+    "\n",
+    "with open('recommendationsC.pickle', 'rb') as handle:\n",
+    "    recommendations2 = pickle.load(handle)\n",
+    "\n",
+    "# merge the two dictionaries\n",
+    "recommendations = {**recommendations1, **recommendations2}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recommnending 5 books similar to 2.Harry_Potter_and_the_Order_of_the_Phoenix\n",
+      "---------------------------------------------------------\n",
+      "Recommended: 5.Harry_Potter_and_the_Prisoner_of_Azkaban\n",
+      "Description: harri potter third year hogwart full new danger convict murder siriu black broken azkaban prison seem harri hogwart patrol dementor azkaban guard hunt siriu harri imagin siriu matter evil lord voldemort could frighten dementor terribl power fill anyon come across ach loneli despair meanwhil life continu usual hogwart top line broom take harri success quidditch sport wizard world new height cute fourth year student catch eye becom close new defens dark art teacher childhood friend father yet despit rel safeti life hogwart best effort dementor threat siriu black grow ever closer harri learn anyth educ wizardri thing often seem tragic revel heartwarm surpris high stake magic adventur await boy wizard funni poignant third instal belov seri scholast com\n",
+      "(score: [[0.03836546]])\n",
+      "\n",
+      "Recommended: 14421103-night-terrors\n",
+      "Description: would wake middl night cold sweat drench sheet gasp air hand race defens throat brief moment fallow would alway realiz two thing one nightmar terribl nightmar two three figur stand foot bed disappear sceneri fallow figur knew well two men silhouett one femal surpris well knew saw everi night would alway run dark eeri familiar place would alway reach pin begin choke life even woke pressur around throat real would linger bruis figur would still stare doctor call night terror said uncommon child young teenag recent lost parent start night sixteenth birthday two week death\n",
+      "(score: [[0.02950528]])\n",
+      "\n",
+      "Recommended: 22331746-the-bad-boy-stole-my-bra\n",
+      "Description: pictur wake middl night swamp star war cover complet utterli groggi extent look like someth monster inc movi hear sound sit turn lamp see new neighbour clamber halfway windowsil still manag look like sort greek god may add hold mickey mous bra well scream obvious get reveng cours\n",
+      "(score: [[0.02491257]])\n",
+      "\n",
+      "Recommended: 23224.Darkest_Hour\n",
+      "Description: buri susannah backyard nineteenth centuri ghost maria de silva wake middl night suze know ordinari visit knife throat either life maria fianc e jess jess murder hundr fifti year jess suze love maria threaten suze backyard construct must ceas suze pretti good idea rather maria want found solv jess murder suze end lose forev\n",
+      "(score: [[0.02295794]])\n",
+      "\n",
+      "Recommended: 196945.The_Torture_Garden\n",
+      "Description: follow twin trail desir deprav shock sadist paradis garden china tortur practic art form dissolut frenchman discov true depth degrad beyond prior bourgeoi imagin entranc resolut englishwoman whose capac debaucheri know bound capitul everi whim amid ecstat yet torment incurs vision scent caress pleasur horror fantast atroc\n",
+      "(score: [[0.02287312]])\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def recommend(item_id, num):\n",
+    "\n",
+    "\t# print Recommending num books similar to : item_id in python\n",
+    "\tprint('Recommnending ' + str(num) + ' books similar to ' + str(item_id))\n",
+    "\t\n",
+    "\n",
+    "\tprint('---------------------------------------------------------')\n",
+    "\trecs = recommendations[item_id][1:num+1]\n",
+    "\tindex = df[df['bookId'] == item_id].index[0]\n",
+    "\n",
+    "\tfor rec in recs:\n",
+    "\t\tprint('Recommended: ' + str(df['bookId'][rec]))\n",
+    "\t\tprint('Description: ' + str(df['description'][rec]))\n",
+    "\t\tprint('(score: ' + str(cosine_similarity(bigrams[index], bigrams[rec])) + ')')\n",
+    "\n",
+    "\t\tprint()\n",
+    "\t\n",
+    "\n",
+    "\n",
+    "recommend(item_id = '2.Harry_Potter_and_the_Order_of_the_Phoenix', num = 5)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "takes 3 times the time"
    ]
   }
  ],
