--- a/ASS2/Data_MIning_Assignment2.ipynb
+++ b/ASS2/Data_MIning_Assignment2.ipynb
@@ -1095,14 +1095,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "devours ram but realtively faster than bigrams"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Bigrams"
    ]
   },
@@ -1116,7 +1108,27 @@
      "output_type": "stream",
      "text": [
       "0\n",
-      "1000\n"
+      "1000\n",
+      "2000\n",
+      "3000\n",
+      "4000\n",
+      "5000\n",
+      "6000\n",
+      "7000\n",
+      "8000\n",
+      "9000\n",
+      "10000\n",
+      "11000\n",
+      "12000\n",
+      "13000\n",
+      "14000\n",
+      "15000\n",
+      "16000\n",
+      "17000\n",
+      "18000\n",
+      "19000\n",
+      "20000\n",
+      "21000\n"
      ]
     }
    ],
@@ -1130,8 +1142,6 @@
     "    cosine_similarities = cosine_similarity(bigrams[i:i+1], bigrams[0:len(df)])\n",
     "  \n",
     "    recommendations[df['bookId'][i]] = cosine_similarities[0].argsort()[:-11:-1]\n",
-    "    # # print the top cosine similarities scores \n",
-    "    # print(cosine_similarities[0][recommendations[df['bookId'][i]]])\n",
     "\n",
     "with open('recommendationsB.pickle', 'wb') as handle:\n",
     "    pickle.dump(recommendations, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
@@ -1144,17 +1154,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# recommendations = {}\n",
-    "# for i in range(ceil(len(df)/2), len(df)):\n",
-    "#     if i % 1000 == 0:\n",
-    "#         print(i)\n",
+    "recommendations = {}\n",
+    "for i in range(ceil(len(df)/2), len(df)):\n",
+    "    if i % 1000 == 0:\n",
+    "        print(i)\n",
     "        \n",
-    "#     cosine_similarities = cosine_similarity(bigrams[i:i+1], bigrams[0:len(df)])\n",
+    "    cosine_similarities = cosine_similarity(bigrams[i:i+1], bigrams[0:len(df)])\n",
     "  \n",
-    "#     recommendations[df['bookId'][i]] = cosine_similarities[0].argsort()[:-11:-1]\n",
+    "    recommendations[df['bookId'][i]] = cosine_similarities[0].argsort()[:-11:-1]\n",
     "\n",
-    "# with open('recommendationsC.pickle', 'wb') as handle:\n",
-    "#     pickle.dump(recommendations, handle, protocol=pickle.HIGHEST_PROTOCOL)"
+    "with open('recommendationsC.pickle', 'wb') as handle:\n",
+    "    pickle.dump(recommendations, handle, protocol=pickle.HIGHEST_PROTOCOL)"
    ]
   },
   {
@@ -1228,14 +1238,6 @@
     "\n",
     "\n",
     "recommend(item_id = '2.Harry_Potter_and_the_Order_of_the_Phoenix', num = 5)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "takes 3 times the time"
    ]
   }
  ],
