--- a/ASS2/Data_MIning_Assignment2.ipynb
+++ b/ASS2/Data_MIning_Assignment2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,8 @@
     "pd.set_option('display.max_columns', None)\n",
     "pd.set_option('display.width', None)\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
-    "import pickle\n"
+    "import pickle\n",
+    "from math import ceil"
    ]
   },
   {
@@ -1100,41 +1101,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1000\n",
-      "2000\n",
-      "3000\n",
-      "4000\n",
-      "5000\n",
-      "6000\n",
-      "7000\n",
-      "8000\n",
-      "9000\n",
-      "10000\n",
-      "11000\n",
-      "12000\n",
-      "13000\n",
-      "14000\n",
-      "15000\n",
-      "16000\n",
-      "17000\n",
-      "18000\n",
-      "19000\n",
-      "20000\n",
-      "21000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "recommendations = {}\n",
-    "from math import ceil\n",
+    "\n",
     "for i in range(0, ceil(len(df)/2)):\n",
     "    if i % 1000 == 0:\n",
     "        print(i)\n",
@@ -1169,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1185,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
