--- a/ASS2/Data_MIning_Assignment2.ipynb
+++ b/ASS2/Data_MIning_Assignment2.ipynb
@@ -1211,6 +1211,14 @@
     "\n",
     "recommend(item_id = '2.Harry_Potter_and_the_Order_of_the_Phoenix', num = 5)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Way more time to compute, way more ram needed, worse resaults"
+   ]
   }
  ],
  "metadata": {
