--- a/ASS2/Data_MIning_Assignment2.ipynb
+++ b/ASS2/Data_MIning_Assignment2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -978,8 +978,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# vectorizer = TfidfVectorizer(ngram_range=(1, 1), max_df=1.0, min_df=1, norm='l1', stop_words=stop_words)\n",
-    "# unigrams = vectorizer.fit_transform(df['description'])\n",
+    "vectorizer = TfidfVectorizer(ngram_range=(1, 1), max_df=1.0, min_df=1, norm='l1', stop_words=stop_words)\n",
+    "unigrams = vectorizer.fit_transform(df['description'])\n",
     "\n",
     "vectorizer = TfidfVectorizer(ngram_range=(2, 2), max_df=1.0, min_df=1, norm='l1', stop_words=stop_words)\n",
     "bigrams = vectorizer.fit_transform(df['description'])"
@@ -991,6 +991,14 @@
    "metadata": {},
    "source": [
     "## Cosine Similarity"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Impossible due to ram limitations to keep 100 recommendations in the dictionary, I keep up to 9, If you want more, check out the better approach provided bellow"
    ]
   },
   {
@@ -1019,8 +1027,8 @@
     "    recommendations[df['bookId'][i]] = cosine_similarities[0].argsort()[:-11:-1]\n",
     "\n",
     "\n",
-    "# with open('recommendations.pickle', 'wb') as handle:\n",
-    "#     pickle.dump(recommendations, handle, protocol=pickle.HIGHEST_PROTOCOL)"
+    "with open('recommendations.pickle', 'wb') as handle:\n",
+    "    pickle.dump(recommendations, handle, protocol=pickle.HIGHEST_PROTOCOL)"
    ]
   },
   {
@@ -1218,6 +1226,137 @@
    "metadata": {},
    "source": [
     "Way more time to compute, way more ram needed, worse resaults"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Better approach"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def recommend(ngrams, item, num):\n",
+    "\tprint('Recommnending ' + str(num) + ' books similar to ' + str(item))\n",
+    "\tprint('---------------------------------------------------------')\n",
+    "\tindex = df[df['bookId'] == item].index[0]\n",
+    "\tcosine_similarities = cosine_similarity(ngrams[index], ngrams[0:len(df)])\n",
+    "\trecs = cosine_similarities[0].argsort()[:-num:-1]\n",
+    "\tfor rec in recs[1:]:\n",
+    "\t\tprint('Recommended: ' + str(df['bookId'][rec]))\n",
+    "\t\tprint('Description: ' + str(df['description'][rec]))\n",
+    "\t\tprint('(score: ' + str(cosine_similarities[0][rec]) + ')')\n",
+    "\n",
+    "\t\tprint()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recommnending 10 books similar to 2.Harry_Potter_and_the_Order_of_the_Phoenix\n",
+      "---------------------------------------------------------\n",
+      "Recommended: 15881.Harry_Potter_and_the_Chamber_of_Secrets\n",
+      "Description: ever sinc harri potter come home summer dursley mean hideou harri want get back hogwart school witchcraft wizardri pack bag harri receiv warn strang impish creatur say harri return hogwart disast strike strike harri second year hogwart fresh torment horror aris includ outrag stuck new professor spirit haunt girl bathroom real troubl begin someon turn hogwart student stone could draco malfoy poison rival ever could possibl hagrid whose mysteri past final told could one everyon hogwart suspect harri potter\n",
+      "(score: 0.3703011412338946)\n",
+      "\n",
+      "Recommended: 5.Harry_Potter_and_the_Prisoner_of_Azkaban\n",
+      "Description: harri potter third year hogwart full new danger convict murder siriu black broken azkaban prison seem harri hogwart patrol dementor azkaban guard hunt siriu harri imagin siriu matter evil lord voldemort could frighten dementor terribl power fill anyon come across ach loneli despair meanwhil life continu usual hogwart top line broom take harri success quidditch sport wizard world new height cute fourth year student catch eye becom close new defens dark art teacher childhood friend father yet despit rel safeti life hogwart best effort dementor threat siriu black grow ever closer harri learn anyth educ wizardri thing often seem tragic revel heartwarm surpris high stake magic adventur await boy wizard funni poignant third instal belov seri scholast com\n",
+      "(score: 0.322818055178114)\n",
+      "\n",
+      "Recommended: 3.Harry_Potter_and_the_Sorcerer_s_Stone\n",
+      "Description: harri potter life miser parent dead stuck heartless rel forc live tini closet stair fortun chang receiv letter tell truth wizard mysteri visitor rescu rel take new home hogwart school witchcraft wizardri lifetim bottl magic power harri final feel like normal kid even within wizard commun special boy live person ever surviv kill cur inflict evil lord voldemort launch brutal takeov wizard world vanish fail kill harri though harri first year hogwart best life everyth perfect danger secret object hidden within castl wall harri believ respons prevent fall evil hand bring contact forc terrifi ever could imagin full sympathet charact wildli imagin situat countless excit detail first instal seri assembl unforgett magic world set stage mani high stake adventur come\n",
+      "(score: 0.27829589350597456)\n",
+      "\n",
+      "Recommended: 2002.Harry_Potter_Schoolbooks_Box_Set\n",
+      "Description: altern cover edit isbn fan harri potter love chanc realli get insid hogwart school witchcraft wizardri straight hogwart school librari come two textbook use harri fellow wizard train written j k rowl two delight pseudonym quidditch age fantast beast find come packag fabul box set know wizard zacharia mump set first full descript game quidditch written renown quidditch expert author mani quidditch relat work quidditch age reveal everyth reader need know import sport wizard world evolut fli broomstick rule play quidditch chang sport sinc th centuri today detail quidditch team britain ireland book must quidditch fan old new well research fill diagram definit quidditch age everi wizard train need pro fantast beast find offer complet list fantast beast exist harri potter world acromantula monstrou eight eye spider capabl human speech yeti also known bigfoot abomin snowman well research inform come look like eat import ever meet one face face indispens textbook also includ insight muggl awar fantast beast inform magizoolog matter much ad fun authent fantast beast find featur scribbl comment margin harri potter previou owner book well friend ron hermion\n",
+      "(score: 0.26982472582964695)\n",
+      "\n",
+      "Recommended: 6.Harry_Potter_and_the_Goblet_of_Fire\n",
+      "Description: harri potter midway train wizard come age harri want get away pernici dursley go intern quidditch cup hermion ron weasley want dream cho chang crush mayb dream want find mysteri event suppos take place hogwart year event involv two rival school magic competit happen hundr year want normal fourteen year old wizard unfortun harri potter normal even wizard standard case differ deadli\n",
+      "(score: 0.25955726339092067)\n",
+      "\n",
+      "Recommended: 8058301-ghost-story\n",
+      "Description: last left mighti wizard detect harri dresden well fact murder unknown assassin dead stop friend danger except bodi magic help also sever dark spirit roam chicago shadow owe harri payback save friend soul harri pull ultim trick without magic\n",
+      "(score: 0.2298153983910475)\n",
+      "\n",
+      "Recommended: 31538647-hogwarts\n",
+      "Description: ministri magic felt strongli howev construct addit wizard station middl london would stretch even muggl notori determin notic magic explod front face j k rowlingpottermor present collect j k rowl write short read origin featur pottermor com ebook write curat pottermor take beyond harri potter stori j k rowl reveal inspir intric detail charact live surpris wizard world hogwart incomplet unreli guid take journey hogwart school witchcraft wizardri ventur hogwart ground becom better acquaint perman resid learn lesson discov secret castl turn page\n",
+      "(score: 0.22622085585504453)\n",
+      "\n",
+      "Recommended: 1.Harry_Potter_and_the_Half_Blood_Prince\n",
+      "Description: war voldemort go well even muggl govern notic ron scan obituari page daili prophet look familiar name dumbledor absent hogwart long stretch time order phoenix alreadi suffer loss yet war life goe weasley twin expand busi sixth year student learn appar lose eyebrow process teenag flirt fight fall love class never straightforward harri receiv extraordinari help mysteri half blood princ home front take center stage multilay sixth instal stori harri potter hogwart harri search full complet stori boy becam lord voldemort therebi find may vulner\n",
+      "(score: 0.20977048511505297)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "recommend(ngrams = unigrams, item = '2.Harry_Potter_and_the_Order_of_the_Phoenix', num = 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recommnending 10 books similar to 2.Harry_Potter_and_the_Order_of_the_Phoenix\n",
+      "---------------------------------------------------------\n",
+      "Recommended: 5.Harry_Potter_and_the_Prisoner_of_Azkaban\n",
+      "Description: harri potter third year hogwart full new danger convict murder siriu black broken azkaban prison seem harri hogwart patrol dementor azkaban guard hunt siriu harri imagin siriu matter evil lord voldemort could frighten dementor terribl power fill anyon come across ach loneli despair meanwhil life continu usual hogwart top line broom take harri success quidditch sport wizard world new height cute fourth year student catch eye becom close new defens dark art teacher childhood friend father yet despit rel safeti life hogwart best effort dementor threat siriu black grow ever closer harri learn anyth educ wizardri thing often seem tragic revel heartwarm surpris high stake magic adventur await boy wizard funni poignant third instal belov seri scholast com\n",
+      "(score: 0.03836545574202778)\n",
+      "\n",
+      "Recommended: 14421103-night-terrors\n",
+      "Description: would wake middl night cold sweat drench sheet gasp air hand race defens throat brief moment fallow would alway realiz two thing one nightmar terribl nightmar two three figur stand foot bed disappear sceneri fallow figur knew well two men silhouett one femal surpris well knew saw everi night would alway run dark eeri familiar place would alway reach pin begin choke life even woke pressur around throat real would linger bruis figur would still stare doctor call night terror said uncommon child young teenag recent lost parent start night sixteenth birthday two week death\n",
+      "(score: 0.029505276690186516)\n",
+      "\n",
+      "Recommended: 22331746-the-bad-boy-stole-my-bra\n",
+      "Description: pictur wake middl night swamp star war cover complet utterli groggi extent look like someth monster inc movi hear sound sit turn lamp see new neighbour clamber halfway windowsil still manag look like sort greek god may add hold mickey mous bra well scream obvious get reveng cours\n",
+      "(score: 0.024912568924101923)\n",
+      "\n",
+      "Recommended: 23224.Darkest_Hour\n",
+      "Description: buri susannah backyard nineteenth centuri ghost maria de silva wake middl night suze know ordinari visit knife throat either life maria fianc e jess jess murder hundr fifti year jess suze love maria threaten suze backyard construct must ceas suze pretti good idea rather maria want found solv jess murder suze end lose forev\n",
+      "(score: 0.0229579397598932)\n",
+      "\n",
+      "Recommended: 196945.The_Torture_Garden\n",
+      "Description: follow twin trail desir deprav shock sadist paradis garden china tortur practic art form dissolut frenchman discov true depth degrad beyond prior bourgeoi imagin entranc resolut englishwoman whose capac debaucheri know bound capitul everi whim amid ecstat yet torment incurs vision scent caress pleasur horror fantast atroc\n",
+      "(score: 0.02287311595828446)\n",
+      "\n",
+      "Recommended: 39217633-louisiana-s-way-home\n",
+      "Description: two time newberi medalist kate dicamillo come stori discov decid want louisiana elefant granni wake middl night tell day reckon arriv leav home immedi louisiana overli worri granni mani middl night idea time thing differ time granni intend never return separ best friend raymi beverli louisiana struggl oppos wind fate granni find way home louisiana life becom entwin live peopl small georgia town includ surli motel owner walru like minist mysteri boy crow shoulder start worri destin good bye could due cur louisiana granni head stori anoth time call one dicamillo singular arrest creation new york time book review heartbreakingli irresist louisiana elefant introduc reader raymi nightingal humor tender kate dicamillo return tell stori\n",
+      "(score: 0.02224283501149739)\n",
+      "\n",
+      "Recommended: 549455.Letters_From_The_Heart\n",
+      "Description: maev lot pressur parent separ receiv big commun servic award blanket project get real bind lie parent friend maev averi learn letter heart true famili friend import thing\n",
+      "(score: 0.02169858265015368)\n",
+      "\n",
+      "Recommended: 685391.Iron_and_Silk\n",
+      "Description: salzman captur post cultur revolut china adventur young american english teacher china shifu tudi master student relationship china foremost martial art teacher\n",
+      "(score: 0.021234901368247367)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "recommend(ngrams = bigrams, item = '2.Harry_Potter_and_the_Order_of_the_Phoenix', num = 10)"
    ]
   }
  ],
