--- a/ASS2/Part3.ipynb
+++ b/ASS2/Part3.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import classification_report, RocCurveDisplay, roc_curve, auc\n",
     "from sklearn.metrics import f1_score \n",
-    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.naive_bayes import GaussianNB, MultinomialNB, BernoulliNB, ComplementNB, CategoricalNB\n",
     "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
@@ -66,6 +66,14 @@
     "from optuna.visualization import plot_slice\n",
     "\n",
     "import joblib\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Loading and Processing the data"
    ]
   },
   {
@@ -207,7 +215,6 @@
     }
    ],
    "source": [
-    "# load csv\n",
     "df = pd.read_csv('books_1.Best_Books_Ever.csv')\n",
     "\n",
     "def convert_to_list(row):\n",
@@ -215,12 +222,11 @@
     "\n",
     "df['genres'] = df['genres'].apply(convert_to_list)\n",
     "df['genreSingle'] = df['genres'].apply(lambda x: x[0] if len(x) > 0 else np.nan)\n",
-    "# keep bookId, description, genreSingle columns\n",
+    "\n",
     "df = df[['bookId', 'description', 'genreSingle']]\n",
-    "# drop rows with NaN\n",
+    "\n",
     "df = df.dropna()\n",
     "\n",
-    "# keep only the rows that have one of the top 10 gerneSingle values\n",
     "top10 = df['genreSingle'].value_counts().head(10).index.tolist()\n",
     "df = df[df['genreSingle'].isin(top10)]\n",
     "df"
@@ -243,8 +249,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !wget http://nlp.stanford.edu/data/glove.6B.zip\n",
-    "# !unzip glove*.zip"
+    "!wget http://nlp.stanford.edu/data/glove.6B.zip\n",
+    "!unzip glove*.zip"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Enumerating the gernes"
    ]
   },
   {
@@ -386,13 +400,20 @@
     }
    ],
    "source": [
-    "# enumerate the 10 genres and keep the enumeration in the df as well as a mapping\n",
     "genre_mapping = {}\n",
     "for i, genre in enumerate(top10):\n",
     "\tgenre_mapping[i] = genre\n",
     "\tdf.loc[df['genreSingle'] == genre, 'genreSingle'] = i\n",
     "    \n",
     "df"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Vectorizing the descriptions"
    ]
   },
   {
@@ -449,12 +470,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Cleaned"
+    "### Get the cleaned data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,7 +501,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Naive Bayes"
+    "# Classification"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Naive Bayes "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Gaussian"
    ]
   },
   {
@@ -531,7 +568,66 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Support vector Machines"
+    "### Bernoulli"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                    precision    recall  f1-score   support\n",
+      "\n",
+      "           Fiction       0.57      0.20      0.30      1154\n",
+      "           Fantasy       0.76      0.55      0.64      1111\n",
+      "           Romance       0.59      0.45      0.51       630\n",
+      "       Young Adult       0.31      0.58      0.41       616\n",
+      "        Nonfiction       0.53      0.46      0.49       507\n",
+      "Historical Fiction       0.42      0.48      0.45       442\n",
+      "           Mystery       0.57      0.67      0.62       421\n",
+      "   Science Fiction       0.54      0.58      0.56       281\n",
+      "          Classics       0.15      0.47      0.23       227\n",
+      "           History       0.38      0.64      0.48       182\n",
+      "\n",
+      "          accuracy                           0.47      5571\n",
+      "         macro avg       0.48      0.51      0.47      5571\n",
+      "      weighted avg       0.54      0.47      0.47      5571\n",
+      "\n",
+      "Accuracy: 0.46 (+/- 0.03)\n",
+      "F1 score: 0.467993\n"
+     ]
+    }
+   ],
+   "source": [
+    "bnb = BernoulliNB()\n",
+    "bnb.fit(Xtrain, Ytrain)\n",
+    "Ypred = bnb.predict(Xtest)\n",
+    "print(classification_report(Ytest, Ypred, target_names=genre_mapping.values()))\n",
+    "\n",
+    "scores = cross_val_score(bnb, X, Y, cv=10)\n",
+    "print(\"Accuracy: %0.2f (+/- %0.2f)\" % (scores.mean(), scores.std() * 2))\n",
+    "f1 = f1_score(Ytest, Ypred, average='macro')\n",
+    "print('F1 score: %f' % f1)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Support vector Machines"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Finding Hyper-Parameters using Optuna's Random Search"
    ]
   },
   {
@@ -9518,6 +9614,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Using the best Hyper Parameters for final resaults"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -9561,57 +9665,47 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Random Forests"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/byron/.local/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1344: UndefinedMetricWarning:\n",
-      "\n",
-      "Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "\n",
-      "/home/byron/.local/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1344: UndefinedMetricWarning:\n",
-      "\n",
-      "Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "\n",
-      "/home/byron/.local/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1344: UndefinedMetricWarning:\n",
-      "\n",
-      "Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "                    precision    recall  f1-score   support\n",
       "\n",
-      "           Fiction       0.28      0.85      0.43      1154\n",
-      "           Fantasy       0.49      0.77      0.60      1111\n",
-      "           Romance       0.49      0.29      0.36       630\n",
-      "       Young Adult       0.00      0.00      0.00       616\n",
-      "        Nonfiction       0.00      0.00      0.00       507\n",
-      "Historical Fiction       0.00      0.00      0.00       442\n",
-      "           Mystery       0.00      0.00      0.00       421\n",
-      "   Science Fiction       0.00      0.00      0.00       281\n",
-      "          Classics       0.00      0.00      0.00       227\n",
-      "           History       0.00      0.00      0.00       182\n",
+      "           Fiction       0.42      0.79      0.55      1154\n",
+      "           Fantasy       0.62      0.81      0.70      1111\n",
+      "           Romance       0.58      0.60      0.59       630\n",
+      "       Young Adult       0.56      0.38      0.45       616\n",
+      "        Nonfiction       0.71      0.42      0.53       507\n",
+      "Historical Fiction       0.66      0.22      0.33       442\n",
+      "           Mystery       0.81      0.46      0.59       421\n",
+      "   Science Fiction       0.87      0.24      0.37       281\n",
+      "          Classics       0.53      0.09      0.15       227\n",
+      "           History       0.71      0.32      0.44       182\n",
       "\n",
-      "          accuracy                           0.36      5571\n",
-      "         macro avg       0.13      0.19      0.14      5571\n",
-      "      weighted avg       0.21      0.36      0.25      5571\n",
+      "          accuracy                           0.55      5571\n",
+      "         macro avg       0.65      0.43      0.47      5571\n",
+      "      weighted avg       0.60      0.55      0.53      5571\n",
       "\n",
-      "Accuracy: 0.36 (+/- 0.02)\n",
-      "F1 score: 0.139406\n"
+      "Accuracy: 0.53 (+/- 0.02)\n",
+      "F1 score: 0.470429\n"
      ]
     }
    ],
    "source": [
     "# classify using random forests from sklearn\n",
-    "forest = RandomForestClassifier(n_estimators=100, max_depth=2, random_state=420)\n",
+    "forest = RandomForestClassifier()\n",
     "forest.fit(Xtrain, Ytrain)\n",
     "Ypred = forest.predict(Xtest)\n",
     "print(classification_report(Ytest, Ypred, target_names=genre_mapping.values()))\n",
@@ -9623,13 +9717,16 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Resaults table"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -9661,46 +9758,53 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Naive Bayes</td>\n",
+       "      <td>Naive Bayes Gaussian</td>\n",
        "      <td>0.32</td>\n",
        "      <td>0.327082</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>Naive Bayes Bernoulli</td>\n",
+       "      <td>0.46</td>\n",
+       "      <td>0.467993</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
        "      <td>SVM</td>\n",
        "      <td>0.66</td>\n",
        "      <td>0.657300</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>3</th>\n",
        "      <td>Random Forest</td>\n",
-       "      <td>0.36</td>\n",
-       "      <td>0.139406</td>\n",
+       "      <td>0.53</td>\n",
+       "      <td>0.470429</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           model  accuracy        f1\n",
-       "0    Naive Bayes      0.32  0.327082\n",
-       "1            SVM      0.66  0.657300\n",
-       "2  Random Forest      0.36  0.139406"
+       "                   model  accuracy        f1\n",
+       "0   Naive Bayes Gaussian      0.32  0.327082\n",
+       "1  Naive Bayes Bernoulli      0.46  0.467993\n",
+       "2                    SVM      0.66  0.657300\n",
+       "3          Random Forest      0.53  0.470429"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\n",
-    "# create and print table with all the results\n",
     "results = pd.DataFrame(columns=['model', 'accuracy', 'f1'])\n",
-    "results.loc[0] = ['Naive Bayes', 0.32, 0.327082]\n",
-    "results.loc[1] = ['SVM', 0.66, 0.657300]\n",
-    "results.loc[2] = ['Random Forest', 0.36, 0.139406]\n",
-    "results"
+    "results.loc[0] = ['Naive Bayes Gaussian', 0.32, 0.327082]\n",
+    "results.loc[1] = ['Naive Bayes Bernoulli', 0.46, 0.467993]\n",
+    "results.loc[2] = ['SVM', 0.66, 0.657300]\n",
+    "results.loc[3] = ['Random Forest', 0.53, 0.470429]\n",
+    "results\n"
    ]
   }
  ],
