--- a/ASS2/Part1_Part2.ipynb
+++ b/ASS2/Part1_Part2.ipynb
@@ -49,12 +49,28 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Getting the data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv('books_1.Best_Books_Ever.csv')\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Removing the rows without a description, or non english. Other rows don't need to be removed since they are not needed"
    ]
   },
   {
@@ -77,8 +93,6 @@
     "\n",
     "df = df[df['language'] == 'English']\n",
     "df = df[df['description'].notna()]\n",
-    "\n",
-    "\n",
     "\n",
     "print(len(df))\n"
    ]
@@ -124,7 +138,6 @@
     "\n",
     "df['ratingsByStars'] = df['ratingsByStars'].apply(convert_to_list)\n",
     "\n",
-    "# create 5 new columns for each star rating or nan if nan\n",
     "\n",
     "df['1_star'] = df['ratingsByStars'].apply(lambda x: x[0] if len(x) > 0 else np.nan)\n",
     "df['2_star'] = df['ratingsByStars'].apply(lambda x: x[1] if len(x) > 1 else np.nan)\n",
@@ -244,7 +257,7 @@
     }
    ],
    "source": [
-    "df['rating'].hist()\n"
+    "df['rating'].hist()"
    ]
   },
   {
@@ -364,8 +377,7 @@
     "\n",
     "Q2 = df.sort_values(by=['pages'], ascending=False).head(10)\n",
     "Q2 = Q2[['title', 'pages']]\n",
-    "Q2\n",
-    "\n"
+    "Q2"
    ]
   },
   {
