--- a/ASS2/Part3.ipynb
+++ b/ASS2/Part3.ipynb
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +546,7 @@
       "         macro avg       0.41      0.40      0.33      5571\n",
       "      weighted avg       0.48      0.34      0.30      5571\n",
       "\n",
-      "Accuracy: 0.32 (+/- 0.01)\n",
+      "Accuracy: 0.324656 (+/- 0.012201)\n",
       "F1 score: 0.327082\n"
      ]
     }
@@ -558,7 +558,7 @@
     "print(classification_report(Ytest, Ypred, target_names=genre_mapping.values()))\n",
     "\n",
     "scores = cross_val_score(gnb, X, Y, cv=10)\n",
-    "print(\"Accuracy: %0.2f (+/- %0.2f)\" % (scores.mean(), scores.std() * 2))\n",
+    "print(\"Accuracy: %f (+/- %f)\" % (scores.mean(), scores.std() * 2))\n",
     "f1 = f1_score(Ytest, Ypred, average='macro')\n",
     "print('F1 score: %f' % f1)\n"
    ]
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +597,7 @@
       "         macro avg       0.48      0.51      0.47      5571\n",
       "      weighted avg       0.54      0.47      0.47      5571\n",
       "\n",
-      "Accuracy: 0.46 (+/- 0.03)\n",
+      "Accuracy: 0.455997 (+/- 0.030377)\n",
       "F1 score: 0.467993\n"
      ]
     }
@@ -609,7 +609,7 @@
     "print(classification_report(Ytest, Ypred, target_names=genre_mapping.values()))\n",
     "\n",
     "scores = cross_val_score(bnb, X, Y, cv=10)\n",
-    "print(\"Accuracy: %0.2f (+/- %0.2f)\" % (scores.mean(), scores.std() * 2))\n",
+    "print(\"Accuracy: %f (+/- %f)\" % (scores.mean(), scores.std() * 2))\n",
     "f1 = f1_score(Ytest, Ypred, average='macro')\n",
     "print('F1 score: %f' % f1)"
    ]
@@ -9623,7 +9623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -9647,7 +9647,7 @@
       "         macro avg       0.70      0.63      0.66      5571\n",
       "      weighted avg       0.69      0.68      0.68      5571\n",
       "\n",
-      "Accuracy: 0.66 (+/- 0.04)\n",
+      "Accuracy: 0.661735 (+/- 0.040898)\n",
       "F1 score: 0.657300\n"
      ]
     }
@@ -9659,7 +9659,7 @@
     "print(classification_report(Ytest, Ypred, target_names=genre_mapping.values()))\n",
     "\n",
     "scores = cross_val_score(clf, X, Y, cv=10)\n",
-    "print(\"Accuracy: %0.2f (+/- %0.2f)\" % (scores.mean(), scores.std() * 2))\n",
+    "print(\"Accuracy: %f (+/- %f)\" % (scores.mean(), scores.std() * 2))\n",
     "f1 = f1_score(Ytest, Ypred, average='macro')\n",
     "print('F1 score: %f' % f1)"
    ]
@@ -9674,7 +9674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -9683,35 +9683,34 @@
      "text": [
       "                    precision    recall  f1-score   support\n",
       "\n",
-      "           Fiction       0.42      0.79      0.55      1154\n",
-      "           Fantasy       0.62      0.81      0.70      1111\n",
-      "           Romance       0.58      0.60      0.59       630\n",
-      "       Young Adult       0.56      0.38      0.45       616\n",
-      "        Nonfiction       0.71      0.42      0.53       507\n",
-      "Historical Fiction       0.66      0.22      0.33       442\n",
-      "           Mystery       0.81      0.46      0.59       421\n",
-      "   Science Fiction       0.87      0.24      0.37       281\n",
-      "          Classics       0.53      0.09      0.15       227\n",
-      "           History       0.71      0.32      0.44       182\n",
+      "           Fiction       0.41      0.75      0.53      1154\n",
+      "           Fantasy       0.60      0.81      0.69      1111\n",
+      "           Romance       0.59      0.60      0.59       630\n",
+      "       Young Adult       0.53      0.36      0.43       616\n",
+      "        Nonfiction       0.72      0.42      0.53       507\n",
+      "Historical Fiction       0.64      0.20      0.30       442\n",
+      "           Mystery       0.79      0.46      0.58       421\n",
+      "   Science Fiction       0.84      0.27      0.41       281\n",
+      "          Classics       0.50      0.08      0.14       227\n",
+      "           History       0.69      0.38      0.49       182\n",
       "\n",
-      "          accuracy                           0.55      5571\n",
-      "         macro avg       0.65      0.43      0.47      5571\n",
-      "      weighted avg       0.60      0.55      0.53      5571\n",
+      "          accuracy                           0.54      5571\n",
+      "         macro avg       0.63      0.43      0.47      5571\n",
+      "      weighted avg       0.59      0.54      0.52      5571\n",
       "\n",
-      "Accuracy: 0.53 (+/- 0.02)\n",
-      "F1 score: 0.470429\n"
+      "Accuracy: 0.535025 (+/- 0.030241)\n",
+      "F1 score: 0.469411\n"
      ]
     }
    ],
    "source": [
-    "# classify using random forests from sklearn\n",
     "forest = RandomForestClassifier()\n",
     "forest.fit(Xtrain, Ytrain)\n",
     "Ypred = forest.predict(Xtest)\n",
     "print(classification_report(Ytest, Ypred, target_names=genre_mapping.values()))\n",
     "\n",
     "scores = cross_val_score(forest, X, Y, cv=10)\n",
-    "print(\"Accuracy: %0.2f (+/- %0.2f)\" % (scores.mean(), scores.std() * 2))\n",
+    "print(\"Accuracy: %f (+/- %f)\" % (scores.mean(), scores.std() * 2))\n",
     "f1 = f1_score(Ytest, Ypred, average='macro')\n",
     "print('F1 score: %f' % f1)"
    ]
@@ -9726,7 +9725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -9759,25 +9758,25 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Naive Bayes Gaussian</td>\n",
-       "      <td>0.32</td>\n",
+       "      <td>0.324656</td>\n",
        "      <td>0.327082</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Naive Bayes Bernoulli</td>\n",
-       "      <td>0.46</td>\n",
+       "      <td>0.455997</td>\n",
        "      <td>0.467993</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>SVM</td>\n",
-       "      <td>0.66</td>\n",
+       "      <td>0.661735</td>\n",
        "      <td>0.657300</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Random Forest</td>\n",
-       "      <td>0.53</td>\n",
+       "      <td>0.535025</td>\n",
        "      <td>0.470429</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -9786,13 +9785,13 @@
       ],
       "text/plain": [
        "                   model  accuracy        f1\n",
-       "0   Naive Bayes Gaussian      0.32  0.327082\n",
-       "1  Naive Bayes Bernoulli      0.46  0.467993\n",
-       "2                    SVM      0.66  0.657300\n",
-       "3          Random Forest      0.53  0.470429"
+       "0   Naive Bayes Gaussian  0.324656  0.327082\n",
+       "1  Naive Bayes Bernoulli  0.455997  0.467993\n",
+       "2                    SVM  0.661735  0.657300\n",
+       "3          Random Forest  0.535025  0.470429"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9800,10 +9799,10 @@
    "source": [
     "\n",
     "results = pd.DataFrame(columns=['model', 'accuracy', 'f1'])\n",
-    "results.loc[0] = ['Naive Bayes Gaussian', 0.32, 0.327082]\n",
-    "results.loc[1] = ['Naive Bayes Bernoulli', 0.46, 0.467993]\n",
-    "results.loc[2] = ['SVM', 0.66, 0.657300]\n",
-    "results.loc[3] = ['Random Forest', 0.53, 0.470429]\n",
+    "results.loc[0] = ['Naive Bayes Gaussian', 0.324656, 0.327082]\n",
+    "results.loc[1] = ['Naive Bayes Bernoulli', 0.455997, 0.467993]\n",
+    "results.loc[2] = ['SVM', 0.661735, 0.657300]\n",
+    "results.loc[3] = ['Random Forest', 0.535025, 0.470429]\n",
     "results\n"
    ]
   }
