--- a/ASS2/Part3.ipynb
+++ b/ASS2/Part3.ipynb
@@ -431,7 +431,7 @@
     "\tfor (i, review) in enumerate(df[\"description\"].values):\n",
     "\t\twvectors = list()\n",
     "\t\tfor word in review.split(\" \"):\n",
-    "\t\t\tif word in w2v.keys(): # Keeping only words in the vocabulary and using theur value\n",
+    "\t\t\tif word in w2v.keys(): \n",
     "\t\t\t\twvectors.append(list(w2v[word]))\n",
     "\t\tif len(wvectors) > 0:\n",
     "\t\t\tX.append(np.mean(wvectors, axis=0)) #we keep the mean \n",
