--- a/ASS2/Part1_Part2.ipynb
+++ b/ASS2/Part1_Part2.ipynb
@@ -5,6 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Data Mining Assignment Parts 1 and 2\n",
     "Vyron-Georgios Anemogiannis 1115202000008  \\\n",
     "Georgios-Alexandros Vasilakopoulos 1115202000018\n",
     "\n",
