--- a/ASS2/Part3.ipynb
+++ b/ASS2/Part3.ipynb
@@ -5,6 +5,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Data Mining Assignment Part 3\n",
+    "\n",
     "Vyron-Georgios Anemogiannis 1115202000008  \\\n",
     "Georgios-Alexandros Vasilakopoulos 1115202000018\n",
     "\n",
